3.nginx_routing/1_loadbalancer.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod1
  namespace: jiho
  labels:
    app: my-nginx  # 레이블을 app으로 변경
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod2
  namespace: jiho
  labels:
    app: my-nginx  # 레이블을 app으로 변경
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: jiho
spec:
  type: LoadBalancer
  selector:
    app: my-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
