3.nginx_routing/3_ingress_https.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment  # 올바른 이름으로 수정
  namespace: jiho
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx  # 단순 키-값 쌍으로 수정
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: jiho
spec:
# Ingress를 적용하기 위해 ClusterIp로 변경
  type: ClusterIP
  selector:
    app: my-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  namespace: jiho
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "server.jiho-test.store"
    secretName: jiho-com-tls
  rules:
  - host: server.jiho-test.store
    http:
      paths:
      - path: /product-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
      - path: /order-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
